glasses icon color in dark mode fixed

--- a/PointNemo/music/css/sonar-home-screen.scss
+++ b/PointNemo/music/css/sonar-home-screen.scss
@@ -652,6 +652,9 @@ button.choose-btn{
         display: grid;
         place-items: center;
     }
+    .gg-read{
+        color: var(--ff-body-text-clr);
+    }
     .expandedInfo{
     }
     
